<?xml version="1.0" encoding="utf-8"?>
<resources> 
<string name="app_name">Flingbox</string>
	
<string name="simulate">Simulate</string>
<string name="end_simulation">End simulation</string>
<string name="new_scene">New Scene</string><string name="load_scene">Load scene</string>
<string name="save_scene">Save scene</string>
<string name="preferences">Preferences</string><string name="body_settings_name">Object Settings</string>
<string name="body_settings_lock_body">Lock Body</string><string name="body_settings_density">Density</string>
<string name="body_settings_restitution">Restitution Coeficient</string>

<string name="select_scene_mode">Select scene mode:</string>
<string name="mode_view">Free view</string>
<string name="mode_drawing">Free drawing</string>
<string name="mode_ground_drawing">Ground drawing</string>


<string name="body_settings_static_friction">Static Friction</string>
<string name="body_settings_kinetic_friction">Kinetic Friction</string>
<string name="body_settings_remove_body">Remove body</string>

<string name="help">Help</string>
<string name="help_draw"><b>Tap and Draw:</b> Draws new body.</string>
<string name="help_body_properties"><b>Long press over body:</b> Edit bodys properties.</string>
<string name="help_drag"><b>Drag over background:</b> Moves scene camera.</string>
<string name="help_move_body"><b>Drag over body:</b> Moves body</string>
<string name="help_zoom"><b>Scroll trackball:</b> Zoom</string>

<string name="help_simulate"><b>Press Trackball:</b> Start/Stop simulating</string>
<string name="help_about">About Flingbox</string>


<string name="help_about_dialog">Flingbox, physics sandbox for Android OS.</string>
<string name="scene_saved">Scene saved!</string>
<string name="scene_save_error">Error saving scene!</string>
<string name="scene_loaded">Scene Loaded!</string>
<string name="scene_load_error">Error loading scene!</string>
</resources>
