<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content">
  	<TableLayout
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
		<TextView android:text="@string/help_draw" 
			android:layout_marginLeft="6dip"
			android:textSize="16px" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView android:text="@string/help_body_properties" 
			android:layout_marginLeft="6dip"
			android:textSize="16px" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView android:text="@string/help_drag" 
			android:layout_marginLeft="6dip"
			android:textSize="16px" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView android:text="@string/help_move_body" 
			android:layout_marginLeft="6dip"
			android:textSize="16px" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<TextView android:text="@string/help_zoom" 
			android:layout_marginLeft="6dip"
			android:textSize="16px" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
			
		<Button android:id="@+id/about_button"
			android:text="@string/help_about" 
			android:gravity="center"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
	</TableLayout>
</ScrollView>
